Bug 416928 - Latte panel background is layered.
Summary: Latte panel background is layered.
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: git (master)
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-29 21:08 UTC by Michał Dybczak
Modified: 2020-02-15 21:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.9
Sentry Crash Report:


Attachments
bugged-panel (40.17 KB, image/png)
2020-01-29 21:08 UTC, Michał Dybczak
Details
layout file (deleted)
2020-01-30 17:47 UTC, Michał Dybczak
Details
warning message (495.27 KB, image/jpeg)
2020-01-30 17:48 UTC, Michał Dybczak
Details
grayed out option to delete the layout (492.82 KB, image/png)
2020-01-30 17:50 UTC, Michał Dybczak
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michał Dybczak 2020-01-29 21:08:20 UTC
Created attachment 125531 [details]
bugged-panel

SUMMARY


STEPS TO REPRODUCE
1. Update to latest latte-dock-git
2. Start a session with latte
3. Have a wallpaper that triggers background (Smart Colors with designated wallpaper switcher for better color detection).

OBSERVED RESULT

Panel's background have two distinctive layers, a stronger and lighter one. See attached photos.


EXPECTED RESULT

Background should be consistent.


Operating System: Manjaro Linux 
KDE Plasma Version: 5.17.5
KDE Frameworks Version: 5.66.0
Qt Version: 5.14.0
Kernel Version: 5.5.0-1-MANJARO
OS Type: 64-bit
Processors: 8 × Intel® Core™ i7-6700HQ CPU @ 2.60GHz
Memory: 7,6 GiB


ADDITIONAL INFORMATION

Opening options, changing unrelated settings and changing them back to previous state fixes the bug for given session. After restart, big shows up again.

I'll give more info but I'm not sure what is relevant.
Comment 1 Michail Vourlakos 2020-01-30 00:09:39 UTC
Send me please your Latte layout file and a link for that specific wallpaper from the screenshot.
Comment 2 Michał Dybczak 2020-01-30 17:46:43 UTC
When I opened Layout Manager, it showed up some warning that the current Layout is corrupted and I need to delete it but... I can't since the Delete button is grayed out. I can delete all other layouts thou...

I'm sending the file and the screenshots, but I wonder if it contains some private info? I modified the layout file that I sent here: calendar_id_list and refresh_token, since everyone can download it.

The wallpaper doesn't matter. The bug ALWAYS shows up when background is present. With wallpapers where smart function makes it fully transparent, the issue is invisible. In other cases it's still present. So it's enough to switch from wallpaper to wallpaper and see which one triggers the background. If there is one, then the bug is visible.
Comment 3 Michał Dybczak 2020-01-30 17:47:38 UTC
Created attachment 125550 [details]
layout file
Comment 4 Michał Dybczak 2020-01-30 17:48:18 UTC
Created attachment 125551 [details]
warning message
Comment 5 Michał Dybczak 2020-01-30 17:50:12 UTC
Created attachment 125552 [details]
grayed out option to delete the layout

I realized now, that the Delete option is grayed out when the layout is chosen and active. So I have to switch it to something else, but I don't want it, because creating new layout is a tedious task and current one is good, aside this issue.
Comment 6 Michał Dybczak 2020-01-30 17:54:20 UTC
Uh, I wanted to modify the layout file and had already done that but forgot to save it, so I attached the unmodified version. I can't see any option to delete the file. Or maybe those data is OK? If this is a sensitive data, please, ask someone who has ability to remove the attachment and I'll upload the fixed version.
Comment 7 Michail Vourlakos 2020-01-30 19:04:53 UTC
I have sent https://phabricator.kde.org/T12617 for the layout sensitive data
Comment 8 Michail Vourlakos 2020-01-30 19:10:36 UTC
BTW if you disable BLUR option for top panel this is fixed right?

Probably for some reason the BLUR AREA sent to KWIN is faulty
Comment 9 Tom Albers 2020-01-30 19:15:11 UTC
The content of attachment 125550 [details] has been deleted for the following reason:

Per user request. (TA)
Comment 10 Michail Vourlakos 2020-01-30 20:03:47 UTC
Git commit 8ab5779bcbc5c6f4604afb11efeeca56faa77641 by Michail Vourlakos.
Committed on 30/01/2020 at 20:02.
Pushed by mvourlakos into branch 'master'.

compute blur area correctly on startup

--improve calculations for Effects area during startup
and at the same time when the dock is totally hidden
so it should not paint any effects area at all.
FIXED-IN:0.9.9

M  +12   -17   app/view/effects.cpp
M  +22   -9    containment/package/contents/ui/PanelBox.qml

https://commits.kde.org/latte-dock/8ab5779bcbc5c6f4604afb11efeeca56faa77641
Comment 11 Michail Vourlakos 2020-01-30 20:04:36 UTC
Git commit b11dacc0042b0ba902bcb92c4ce16562ad63aae2 by Michail Vourlakos.
Committed on 30/01/2020 at 20:04.
Pushed by mvourlakos into branch 'v0.9'.

compute blur area correctly on startup

--improve calculations for Effects area during startup
and at the same time when the dock is totally hidden
so it should not paint any effects area at all.
FIXED-IN:0.9.9

M  +12   -17   app/view/effects.cpp
M  +22   -9    containment/package/contents/ui/PanelBox.qml

https://commits.kde.org/latte-dock/b11dacc0042b0ba902bcb92c4ce16562ad63aae2
Comment 12 Michał Dybczak 2020-01-31 17:14:26 UTC
I discovered that bug didn't always show, so there are times when it's pretty consistent and other times it's gone, but then it shows up again.

I haven't updated git yet to observe it for a while, but when I finally do update it, I also let myself to watch it for a longer time and then report it back if it solved the issue.
Comment 13 Michał Dybczak 2020-02-15 21:13:00 UTC
I applied the fixed version. Two weeks have passed and the issue is gone for good, so it's safe to say that this really fixed.

Thank you :)